tests/fixtures/invalid/pow_dict_int_list.py
# Cannot call pow() with Dict[str, int], Int, List[int]
x = pow({"a": 1}, 1, [1, 2, 3])
